$GET er fixed. Søgeresultater er ikke længere stretched. Footer klistrer nu korrekt til bottom.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,8 +219,7 @@ a:hover {
     display: block;
     margin: auto;
 
-    min-width: 50%;
-    min-height: 100%;
+    min-height: 50%;
 
     max-width: 400px;
     max-height: 400px;
@@ -246,8 +245,8 @@ a:hover {
 }
 
 #footer {
-    position: relative;
-    bottom: -20px;
+    position: fixed;
+    bottom: 0;
 }
 
 #footerelements {
@@ -256,17 +255,18 @@ a:hover {
     width: 75%;
     min-width: 800px;
     max-width: 1200px;
-    padding-top: -30px;
 
     margin-left: auto;
     margin-right: auto;
 }
 
 #footer p {
-    padding-top: 7px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-size: 15px;
     font-family: 'Segoe UI Light', "Arial", serif;
     text-align: center;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 0;
+    margin-top: 1px;
 }
